# Run_Track

./: README.md  build.gradle  gradle.properties  settings.gradle
SimpleCPXWrapper/: build.gradle.kts
SimpleCPXWrapper/src/androidTest/java/com/lazarus/simplecpxwrapper/: ExampleInstrumentedTest.kt
SimpleCPXWrapper/src/main/cpp/: CMakeLists.txt  simplecpxwrapper.cpp  t.c
SimpleCPXWrapper/src/main/cpp/include/: Location.h  SimpleCPXParser.c  expat_config.h
SimpleCPXWrapper/src/main/java/com/lazarus/simplecpxwrapper/: CPXGeoPoint.kt  GPXParserLocation.kt  NativeLib.kt
SimpleCPXWrapper/src/test/java/com/lazarus/simplecpxwrapper/: ExampleUnitTest.kt
app/: build.gradle  google-services.json
app/src/androidTest/java/com/lazarus/run_track1/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: crédits.txt  licence.txt
app/src/main/cpp/: CMakeLists.txt  SimpleCPXParser.c  SimpleCPXWrapper.cpp  SimpleCPXWrapper.h  main.c  run_track1.cpp
app/src/main/java/com/lazarus/run_track1/: CPXGeoPoint.kt  EncryptionProtocol.kt  MainActivity.kt  MessageValues.kt  ParcelableGPX.kt  ParcelableTrackPoint.kt  sendEmail.kt
app/src/main/java/com/lazarus/run_track1/HActivitiesFragment/: ActivityMapFragment.kt  ActivityStatFragment.kt  HActivityFragment.kt  MonAdaptateur.kt  OpenAppCompatButton.kt  PlaqueÀBas.kt  ViewActivityFragment.kt
app/src/main/java/com/lazarus/run_track1/MapsFragment/: InfoDActiviteButtons.kt  MapFragment.kt  StatsLayout.kt
app/src/main/java/com/lazarus/run_track1/NativeJNI/: MonJNI.kt
app/src/main/java/com/lazarus/run_track1/Service/: BoundTrackerService.kt  NameTrackDialogue.kt  NameTrackDialogueService.kt  TrackerService.kt  TrackerServiceEndListener.kt
app/src/main/java/com/lazarus/run_track1/SettingsFragment/: LicenseDialogue.kt  LicenseDialogueService.kt  SettingsFragment.kt
app/src/main/java/com/lazarus/run_track1/SettingsFragment/LocationTrackRateFragment/: LocationTrackRateFragment.kt
app/src/main/java/com/lazarus/run_track1/SimpleJPX/: SimpleJPX.kt
app/src/main/jniLibs/arm64-v8a/: libexpat.so.1
app/src/main/res/drawable/: activite_background.xml  ic_drawing.xml  ic_license.xml  ic_locationtrackrate.xml  ic_mode_switch.xml  ic_track_settings.xml
app/src/main/res/layout/: activity_main.xml  h_activity_fragment.xml  license_dialogue.xml  location_track_rate_fragment.xml  map_fragment.xml  name_track_dialogue.xml  objet_activite.xml  plaque_a_bas.xml  settings_fragment.xml  vue_d_avancemet.xml
app/src/main/res/menu/: bottom_navigation_menu.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/lazarus/run_track1/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
